--- a/card.css
+++ b/card.css
@@ -1,156 +1,186 @@
 
-* {
-    box-sizing: border-box !important;
-    transition: ease all 0.5s;
+
+.wrapper { 
+	max-width: 1100px; 
+	width: 100%; 
+	position: relative; 
+  margin: 3% auto;
+
+} 
+
+.wrapper i { 
+	height: 50px; 
+	width: 50px; 
+	background: rgb(118, 233, 118); 
+	text-align: center; 
+	line-height: 50px; 
+	border-radius: 50%; 
+	cursor: pointer; 
+	position: absolute; 
+	top: 50%; 
+	font-size: 1.25 rem; 
+	transform: translateY(-50%); 
+	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23); 
+
+} 
+
+.wrapper i:first-child { 
+	left: -22px; 
+
+} 
+
+.wrapper i:last-child { 
+	right: -22px; 
+
+} 
+
+.wrapper .carousel { 
+	display: grid; 
+	grid-auto-flow: column; 
+	grid-auto-columns: calc((100% / 3) - 12px); 
+	gap: 16px; 
+	overflow-x: auto; 
+	scroll-snap-type: x mandatory; 
+	scroll-behavior: smooth; 
+	scrollbar-width: 0; 
+} 
+
+.carousel::-webkit-scrollbar { 
+	display: none; 
+} 
+
+.carousel :where(.card, .img) { 
+	display: flex; 
+	align-items: center; 
+	justify-content: center; 
+} 
+
+.carousel.dragging { 
+	scroll-snap-type: none; 
+	scroll-behavior: auto; 
+} 
+
+.carousel.no-transition { 
+	scroll-behavior: auto; 
+} 
+
+.carousel.dragging .card { 
+	cursor: grab; 
+	user-select: none; 
+} 
+
+.carousel .card { 
+	scroll-snap-align: start; 
+	height: 350px; 
+	list-style: none; 
+	background: #fff; 
+  border-radius: 12px;
+	display: flex; 
+	cursor: pointer; 
+	width: 80%; 
+	align-items: center; 
+	justify-content: center; 
+	flex-direction: column; 
+  padding: 20px 20px;
+  animation: shadow 1.8s infinite ease-in-out;
+  transition: box-shadow 200ms cubic-bezier(0.895, 0.03, 0.685, 0.22);
+} 
+
+.profileimg{
+  width:200px;
+  height:180px;
+}
+
+
+.card .heading {
+  color: royalblue;
+  font-size: 1em;
+  font-weight: 600;
+  text-align: center;
 
 }
 
-html {
-    scroll-behavior: smooth;
-}
-.container1{
-    height: 200%;
-    padding-top:100px;
-    margin: 10px;
-    width: 100%;
-    color: #0CF7EC;
-    
+.card .heading span {
+  display: inline-block;
+  font-size: 0.8em;
+  font-weight: 500;
 }
 
-.card{
-    --font-color: #323232;
-    --bg-color: rgb(216, 210, 210);
-    width:300px;
-    height:350px;
-    border-radius: 20px;
-    background: var(--bg-color);
-   
-    display: flex;
-    flex-direction: column;
-    transition: .4s;
-    position: relative;
-  }
-  
-  .card:hover {
-    transform: scale(1.02);
-    box-shadow: -5px 9px 15px #5a5a5a,
-  5px -9px 15px #ffffff;  }
-  
-  .card .heading {
-    color: royalblue;
-    font-size: 1em;
-    font-weight: 600;
-    text-align: center;
-    margin-bottom: 1.5em;
-  }
-  
-  .card .heading span {
-    display: inline-block;
-    font-size: 0.8em;
-    font-weight: 500;
-  }
-  
-  .card .icons {
-    display: inline-flex;
-    width: 48px;
-    height: 48px;
-    box-shadow: 25px 25px 50px rgba(9, 148, 255, 0.25),
-    -2px -2px 5px rgba(9, 148, 255, 0.25),
-    inset -2px -2px 55px rgba(9, 148, 255, 0.5);
-    justify-content: center;
-    align-items: center;
-    border-radius: 1em;
-  }
-  
-  .card .icons-container {
-    width: fit-content;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1em;
-  }
-  
-  .card .icons svg {
-    fill: royalblue;
-    height: 24px;
-    width: 24px;
-  }
-  
-  .card .code {
-    width: fit-content;
-    margin: 1.5em auto;
-  }
-  
-  .card .code svg {
-    fill: royalblue;
-    width: 180px;
-    aspect-ratio: 16/9;
-  }
-
-  .profileimg{
-    width:200px;
-    height:150px;
-    border-radius: 50%;
-  }
-
-
-
-
-
-
-  /*  */
-
-.heading{
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+.card .icons {
+  display: inline-flex;
+  width: 48px;
+  height: 48px;
+  box-shadow: 25px 25px 50px rgba(127, 180, 220, 0.25),
+  -2px -2px 5px rgba(9, 148, 255, 0.25),
+  inset -2px 5px 55px rgba(5, 137, 238, 0.5);
+  justify-content: center;
+  align-items: center;
+  border-radius: 1em;
 }
-.products .box-container{
-    display: grid;
-   grid-template-columns: repeat(auto-fit,20rem);
-   gap:1.5rem;
-   justify-content: center;
-   
- }
- .products{
- }
- .products .box-container .box{
-    text-align: center;
-    padding:5rem;
-    border:var(--border);
-    border-radius: .5rem;
- }
 
- .box-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
- }
- 
- 
- 
- 
- 
- 
- 
+.card .icons-container {
+  width: fit-content;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+}
 
- 
-  
-  @keyframes shadow {
-    0% {
-      box-shadow: 5px 5px 20px rgba(9, 148, 255, 0.15),
-    -5px -5px 10px rgba(9, 148, 255, 0.1),
-    inset -5px -5px 5px rgba(9, 148, 255, 0.5);
-    }
-  
-    50% {
-      box-shadow: 25px 25px 50px rgba(9, 148, 255, 0.25),
-    -10px -10px 30px rgba(9, 148, 255, 0.1),
-    inset -5px -5px 15px rgba(9, 148, 255, 0.5);
-    }
-  
-    100% {
-      box-shadow: 5px 5px 20px rgba(9, 148, 255, 0.15),
-    -5px -5px 10px rgba(9, 148, 255, 0.1),
-    inset -5px -5px 5px rgba(9, 148, 255, 0.5);
-    }
-  }
+.card .icons svg {
+  fill: royalblue;
+  height: 24px;
+  width: 24px;
+}
+
+.card .code {
+  width: fit-content;
+  margin: 1.5em auto;
+}
+
+.card .code svg {
+  fill: royalblue;
+  width: 180px;
+  aspect-ratio: 16/9;
+}
+h1{
+  color: #3f43fd;
+}
+
+.card .img img { 
+  width:200px;
+  height:200px;
+	object-fit: cover; 
+	border-radius: 50%; 
+	border: 4px solid #fff; 
+} 
+
+
+.card span { 
+	color: #6a6d78; 
+	font-size: 1.31rem; 
+
+} 
+
+#right{
+  background-color:#3f43fd;
+}
+
+
+#left{
+  background-color:#3f43fd;
+}
+
+@media screen and (max-width: 900px) { 
+	.wrapper .carousel { 
+		grid-auto-columns: calc((100% / 2) - 9px); 
+
+	} 
+} 
+
+@media screen and (max-width: 600px) { 
+	.wrapper .carousel { 
+		grid-auto-columns: 100%; 
+
+	} 
+}
