--- a/contact.css
+++ b/contact.css
@@ -7,26 +7,32 @@
 html {
     scroll-behavior: smooth;
 }
-.container{
-    height:100%;
-    padding:10px;
-    margin: 10px;
-    width: 100%;
+.contactcontainer{
+    height:auto;   
+    width:1000px;
     display: flex;
     align-items: center;
-    justify-content: center;
-}
+    justify-content:start;
+    border-radius: 10px;
+    background-color:#0a205a;
+    margin: 20px auto;
+
+   }
 .form {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  max-width: 350px;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 10px;
+  max-width: 400px;
+  height:100%;
+  background-color:#0a205a; 
+   padding: 20px;
   position: relative;
 }
-
+.contactimg{
+  width: 500px;
+  height: 110%;
+  border-radius: 10px;
+}
 .message {
   color: rgba(88, 87, 87, 0.822);
   font-size: 14px;
