--- a/events.css
+++ b/events.css
@@ -29,7 +29,7 @@ html {
     border-radius: 10px;
     padding: 30px;
     font-family: Arial, Helvetica, sans-serif;
-    position: relative;
+    position: block;
     gap:10px;
     color: antiquewhite;
   }
