--- a/footer.css
+++ b/footer.css
@@ -1,36 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-body{
+
+body {
 	line-height: 1.5;
 	font-family: 'Poppins', sans-serif;
 }
-*{
-	margin:0;
-	padding:0;
+
+* {
+	margin: 0;
+	padding: 0;
 	box-sizing: border-box;
 }
-.container{
-	max-width: 1170px;
-	margin:auto;
+
+.container {
+	max-width: 100%;
+	margin: auto;
 }
-.row{
+
+.row {
 	display: flex;
 	flex-wrap: wrap;
 }
-ul{
+
+ul {
 	list-style: none;
 }
-.footer{
-	
- background-color: rgba(43, 53, 62, 0.3); 
-  backdrop-filter: blur(10px);
-    padding: 30px 0;
+
+.footer {
+	background-color: rgba(43, 53, 62, 0.3);
+	backdrop-filter: blur(10px);
+	padding: 30px 0;
 }
-.footer-col{
-   width: 25%;
-   padding: 0 10px;
-   
+
+.footer-col {
+	width: 25%;
+	padding: 0 10px;
+
 }
-.footer-col h4{
+
+.footer-col h4 {
 	font-size: 18px;
 	color: #ffffff;
 	text-transform: capitalize;
@@ -38,20 +45,23 @@ ul{
 	font-weight: 500;
 	position: relative;
 }
-.footer-col h4::before{
+
+.footer-col h4::before {
 	content: '';
 	position: absolute;
-	left:0;
+	left: 0;
 	bottom: -10px;
 	background-color: #e91e63;
 	height: 2px;
 	box-sizing: border-box;
 	width: 50px;
 }
-.footer-col ul li:not(:last-child){
+
+.footer-col ul li:not(:last-child) {
 	margin-bottom: 10px;
 }
-.footer-col ul li a{
+
+.footer-col ul li a {
 	font-size: 16px;
 	text-transform: capitalize;
 	color: #ffffff;
@@ -61,39 +71,40 @@ ul{
 	display: block;
 	transition: all 0.3s ease;
 }
-.footer-col ul li a:hover{
+
+.footer-col ul li a:hover {
 	color: #ffffff;
 	padding-left: 8px;
 }
-.footer-col .social-links a{
+
+.footer-col .social-links a {
 	display: inline-block;
 	height: 40px;
 	width: 40px;
-	background-color: rgba(255,255,255,0.2);
-	margin:0 10px 10px 0;
+	background-color: rgba(255, 255, 255, 0.2);
+	margin: 0 10px 10px 0;
 	text-align: center;
 	line-height: 40px;
 	border-radius: 50%;
 	color: #ffffff;
 	transition: all 0.5s ease;
 }
-.footer-col .social-links a:hover{
+
+.footer-col .social-links a:hover {
 	color: #24262b;
 	background-color: #ffffff;
 }
 
 /*responsive*/
-@media(max-width: 767px){
-  .footer-col{
-    width: 50%;
-    margin-bottom: 30px;
-}
-}
-@media(max-width: 574px){
-  .footer-col{
-    width: 100%;
-}
+@media(max-width: 767px) {
+	.footer-col {
+		width: 50%;
+		margin-bottom: 30px;
+	}
 }
 
-
-
+@media(max-width: 574px) {
+	.footer-col {
+		width: 100%;
+	}
+}
