--- a/card.css
+++ b/card.css
@@ -1,186 +1,188 @@
+.wrapper {
+	max-width: 1100px;
+	width: 100%;
+	position: relative;
+	margin: 3% auto;
 
+}
 
-.wrapper { 
-	max-width: 1100px; 
-	width: 100%; 
-	position: relative; 
-  margin: 3% auto;
+.wrapper i {
+	height: 50px;
+	width: 50px;
+	background: rgb(118, 233, 118);
+	text-align: center;
+	line-height: 50px;
+	border-radius: 50%;
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	font-size: 1.25 rem;
+	transform: translateY(-50%);
+	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
 
-} 
+}
 
-.wrapper i { 
-	height: 50px; 
-	width: 50px; 
-	background: rgb(118, 233, 118); 
-	text-align: center; 
-	line-height: 50px; 
-	border-radius: 50%; 
-	cursor: pointer; 
-	position: absolute; 
-	top: 50%; 
-	font-size: 1.25 rem; 
-	transform: translateY(-50%); 
-	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23); 
+.wrapper i:first-child {
+	left: 5px;
 
-} 
+}
 
-.wrapper i:first-child { 
-	left: -22px; 
+.wrapper i:last-child {
+	right: 5px;
 
-} 
+}
 
-.wrapper i:last-child { 
-	right: -22px; 
+.wrapper .carousel {
+	display: grid;
+	grid-auto-flow: column;
+	grid-auto-columns: calc((100% / 3) - 12px);
+	gap: 16px;
+	overflow-x: auto;
+	scroll-snap-type: x mandatory;
+	scroll-behavior: smooth;
+	scrollbar-width: 0;
+}
 
-} 
+.carousel::-webkit-scrollbar {
+	display: none;
+}
 
-.wrapper .carousel { 
-	display: grid; 
-	grid-auto-flow: column; 
-	grid-auto-columns: calc((100% / 3) - 12px); 
-	gap: 16px; 
-	overflow-x: auto; 
-	scroll-snap-type: x mandatory; 
-	scroll-behavior: smooth; 
-	scrollbar-width: 0; 
-} 
+.carousel :where(.card, .img) {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 
-.carousel::-webkit-scrollbar { 
-	display: none; 
-} 
+.carousel.dragging {
+	scroll-snap-type: none;
+	scroll-behavior: auto;
+}
 
-.carousel :where(.card, .img) { 
-	display: flex; 
-	align-items: center; 
-	justify-content: center; 
-} 
+.carousel.no-transition {
+	scroll-behavior: auto;
+}
 
-.carousel.dragging { 
-	scroll-snap-type: none; 
-	scroll-behavior: auto; 
-} 
+.carousel.dragging .card {
+	cursor: grab;
+	user-select: none;
+}
 
-.carousel.no-transition { 
-	scroll-behavior: auto; 
-} 
+.carousel .card {
+	scroll-snap-align: start;
+	height: 350px;
+	list-style: none;
+	background: #fff;
+	border-radius: 12px;
+	display: flex;
+	cursor: pointer;
+	width: 80%;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 15px;
+	animation: shadow 1.8s infinite ease-in-out;
+	transition: box-shadow 200ms cubic-bezier(0.895, 0.03, 0.685, 0.22);
+}
+.wrapper ul{
+	margin-left: 60px;
+}
 
-.carousel.dragging .card { 
-	cursor: grab; 
-	user-select: none; 
-} 
-
-.carousel .card { 
-	scroll-snap-align: start; 
-	height: 350px; 
-	list-style: none; 
-	background: #fff; 
-  border-radius: 12px;
-	display: flex; 
-	cursor: pointer; 
-	width: 80%; 
-	align-items: center; 
-	justify-content: center; 
-	flex-direction: column; 
-  padding: 20px 20px;
-  animation: shadow 1.8s infinite ease-in-out;
-  transition: box-shadow 200ms cubic-bezier(0.895, 0.03, 0.685, 0.22);
-} 
-
-.profileimg{
-  width:200px;
-  height:180px;
+.profileimg {
+	width: 180px;
+	height: 180px;
 }
 
 
 .card .heading {
-  color: royalblue;
-  font-size: 1em;
-  font-weight: 600;
-  text-align: center;
+	color: royalblue;
+	font-size: 1em;
+	font-weight: 600;
+	text-align: center;
 
 }
 
 .card .heading span {
-  display: inline-block;
-  font-size: 0.8em;
-  font-weight: 500;
+	display: inline-block;
+	font-size: 0.8em;
+	font-weight: 500;
 }
 
 .card .icons {
-  display: inline-flex;
-  width: 48px;
-  height: 48px;
-  box-shadow: 25px 25px 50px rgba(127, 180, 220, 0.25),
-  -2px -2px 5px rgba(9, 148, 255, 0.25),
-  inset -2px 5px 55px rgba(5, 137, 238, 0.5);
-  justify-content: center;
-  align-items: center;
-  border-radius: 1em;
+	display: inline-flex;
+	width: 48px;
+	height: 48px;
+	box-shadow: 25px 25px 50px rgba(127, 180, 220, 0.25),
+		-2px -2px 5px rgba(9, 148, 255, 0.25),
+		inset -2px 5px 55px rgba(5, 137, 238, 0.5);
+	justify-content: center;
+	align-items: center;
+	border-radius: 1em;
 }
 
 .card .icons-container {
-  width: fit-content;
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1em;
+	width: fit-content;
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 1em;
 }
 
 .card .icons svg {
-  fill: royalblue;
-  height: 24px;
-  width: 24px;
+	fill: royalblue;
+	height: 24px;
+	width: 24px;
 }
 
 .card .code {
-  width: fit-content;
-  margin: 1.5em auto;
+	width: fit-content;
+	margin: 1.5em auto;
 }
 
 .card .code svg {
-  fill: royalblue;
-  width: 180px;
-  aspect-ratio: 16/9;
-}
-h1{
-  color: #3f43fd;
+	fill: royalblue;
+	width: 180px;
+	aspect-ratio: 16/9;
 }
 
-.card .img img { 
-  width:200px;
-  height:200px;
-	object-fit: cover; 
-	border-radius: 50%; 
-	border: 4px solid #fff; 
-} 
+h1 {
+	color: #3f43fd;
+}
 
-
-.card span { 
-	color: #6a6d78; 
-	font-size: 1.31rem; 
-
-} 
-
-#right{
-  background-color:#3f43fd;
+.card .img img {
+	width: 200px;
+	height: 200px;
+	object-fit: cover;
+	border-radius: 50%;
+	border: 4px solid #fff;
 }
 
 
-#left{
-  background-color:#3f43fd;
+.card span {
+	color: #6a6d78;
+	font-size: 1.31rem;
+
 }
 
-@media screen and (max-width: 900px) { 
-	.wrapper .carousel { 
-		grid-auto-columns: calc((100% / 2) - 9px); 
+#right {
+	background-color: #3f43fd;
+}
 
-	} 
-} 
 
-@media screen and (max-width: 600px) { 
-	.wrapper .carousel { 
-		grid-auto-columns: 100%; 
+#left {
+	background-color: #3f43fd;
+}
 
-	} 
+@media screen and (max-width: 900px) {
+	.wrapper .carousel {
+		grid-auto-columns: calc((100% / 2) - 9px);
+
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.wrapper .carousel {
+		grid-auto-columns: 100%;
+
+	}
 }
