--- a/index.css
+++ b/index.css
@@ -1,81 +1,104 @@
 * {
     box-sizing: border-box !important;
     transition: ease all 0.5s;
-   
+
 }
-body{
+
+body {
     width: 100%;
     height: auto;
     padding: 0px;
     margin: 0px;
 
 }
+
 html {
     scroll-behavior: smooth;
-    color:white;
+    color: white;
     background-color: #3a4c7a;
 
 }
-h1{
+
+h1 {
     font-size: 20px;
 }
 
-.profile-container{
+.profile-container {
     width: 100%;
     height: 500%;
     margin-bottom: 100px;
-    background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100% );
+    background: linear-gradient(-45deg, #f89b29 0%, #ff0f7b 100%);
     background-clip: text;
-    color:white;
-}
-.event-container {
-    width: 100%;
-    height:100%;
-    margin-bottom: 150px;
-    color:white;
-
-}
-.event-container h1{
-    color: white
-}
-.contactform-container{
-    width: 100%;
-    height:100%;
-    
-}
-.footer{
-    width: 100%;
-    height:100%;
-}
-.allmemberimg {
-    width:80%;
-    border-radius: 10px;
-}
-.Aboutmlsa{
-    padding:0 90px;
-    text-align:center;
-    color:white;
-}
-.Aboutus .h3{
     color: white;
 }
-h3{
+
+.event-container {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 150px;
+    color: white;
+
+}
+
+.event-container h1 {
+    color: white
+}
+
+.contactform-container {
+    width: 100%;
+    height: 100%;
+
+}
+
+.footer {
+    width: 100%;
+    height: 100%;
+}
+
+.allmemberimg {
+    width: 80%;
+    border-radius: 10px;
+}
+
+.Aboutmlsa {
+    padding: 0 90px;
+    text-align: center;
+    color: white;
+}
+
+.Aboutus .h3 {
+    color: white;
+}
+
+h3 {
     color: #f5f5ff;
     /* color: rgb(234, 178, 105); */
 }
-.Aboutus{
+
+.Aboutus {
     padding: 80px 0;
-    color:white;
+    color: white;
 }
+
 @keyframes bounce {
-    from { opacity: 0; transform: translateY(50px); }
-    to { opacity: 1; transform: translateY(0); }
-  }
-  
-  .animated-heading {
-    animation: bounce 1s ease-in-out infinite alternate;  /* Animation properties */
-  }
+    from {
+        opacity: 0;
+        transform: translateY(50px);
+    }
 
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 
+.animated-heading {
+    animation: bounce 1s ease-in-out infinite alternate;
+    /* Animation properties */
+}
 
-
+@media (max-width: 600px) {
+    .Aboutmlsa{
+        padding: 0 30px;
+    }
+}
